syntax = "proto3";
package sanlab.icecream.sharedlib.proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "common.proto";

option java_multiple_files = true;

message CustomerDTO {
    optional uint64 id = 1;
    optional string email = 2;
    optional string phone = 3;
    optional string lastName = 4;
    optional string firstName = 5;
    optional bool isActive = 6;
    optional string username = 7;
    optional string mediaId = 8;
    optional google.protobuf.Timestamp createdOn = 9;
    optional string createdBy = 10;
    optional google.protobuf.Timestamp lastModifiedOn = 11;
    optional string lastModifiedBy = 12;
}

message CustomerRequest {
    optional uint64 customerId = 1;
    optional string customerUsername = 2;
}

message CustomerResponse {
    CustomerDTO customer = 1;
}

message CustomerCollectionResponse {
    repeated CustomerDTO customerCollection = 1;
}

message CustomerAddressDTO {
    optional uint64 id = 1;
    optional uint64 customerId = 2;
    optional uint64 addressId = 3;
}

message CustomerAddressRequest {
    uint64 customerAddressId = 1;
}

message CustomerAddressResponse {
    CustomerAddressDTO customerAddress = 1;
}

service CustomerService {
    rpc getAllCustomers(PageInfoRequest) returns (CustomerCollectionResponse);
    rpc getCustomerById(CustomerRequest) returns (CustomerResponse);
    rpc getCustomerByUsername(CustomerRequest) returns (CustomerResponse);
}
